flex to navigations added

--- a/index.html
+++ b/index.html
@@ -38,12 +38,10 @@
     </header>
 
     <nav class="navigation">
-        <ul class="navigation__list">
-            <li class="navigation__listItem"><a class="navigation__link" href="#o-mnie">O MNIE</a></li>
-            <li class="navigation__listItem"><a class="navigation__link" href="#projekty">PROJEKTY</a></li>
-            <li class="navigation__listItem"><a class="navigation__link" href="#hobby">HOBBY</a></li>
-            <li class="navigation__listItem"><a class="navigation__link" href="#kontakt">KONTAKT</a></li>
-        </ul>
+        <div class="navigation__item"><a class="navigation__link" href="#o-mnie">O MNIE</a></div>
+        <div class="navigation__item"><a class="navigation__link" href="#projekty">PROJEKTY</a></div>
+        <div class="navigation__item"><a class="navigation__link" href="#hobby">HOBBY</a></div>
+        <div class="navigation__item"><a class="navigation__link" href="#kontakt">KONTAKT</a></div>
     </nav>
 
 
