arrow functions added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
     <main>
-        <div class="welcome"><b>Witaj!
+        <div class="myNameIs"><b>Witaj!
                 <br> Mam na imię Angelika</b>
         </div>
 
