--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <section class="section">
 
-            <h2 class="section__header" id="o-mnie">O MNIE</h2>
+            <h2 class="section__header" id="o-mnie">o mnie</h2>
 
             <div class="section__aboutMe">
                 <p class="section__paragraph section__paragraph--highlighted">Z wykształcenia jestem <b>architektem</b>
@@ -107,7 +107,7 @@
         </section>
 
         <section class="section section--dark">
-            <h2 class="section__header" id="projekty">PROJEKTY</h2>
+            <h2 class="section__header" id="projekty">projekty</h2>
             <div>
                 <img class="section__projectPicture" width="290"
                     src="https://i.postimg.cc/yxXKZHbq/Projekt-bez-tytu-u.png" alt="projek_salonu">
@@ -119,7 +119,7 @@
         </section>
 
         <section class="section">
-            <h2 class="section__header" id="hobby">HOBBY</h2>
+            <h2 class="section__header" id="hobby">hobby</h2>
             <p class="section__paragraph">
                 fotografia, montaż filmów, malowanie figurek do gier planszowych
             </p>
@@ -163,7 +163,7 @@
 
         <section>
             <div class="contact">
-                <h3 class="element" id="kontakt">KONTAKT</h3>
+                <h3 class="element" id="kontakt">kontakt</h3>
                 <p><a class="contact__link" href="mailto:archiangel809@gmail.com">archiangel809@gmail.com</a></p>
                 Zapraszam na moją stronę:
                 <a class="contact__link" href="https://www.facebook.com/archiangeldesign">
